Fix spacing on tables, get rid of shortened-col/shorten-col hack because Bootstrap 4 responsive tables are generally better (yes you need to scroll, but there is no information loss)

--- a/src/css/datatable.scss
+++ b/src/css/datatable.scss
@@ -55,10 +55,11 @@ ul.pagination {
     color: $white;
 }
 
-table.table {
-    clear: both;
-    margin-bottom: 6px !important;
+.fix-margin-pagination {
+    margin-bottom: 8px !important;
+}
 
+table.table {
     thead {
         .sorting,
         .sorting_asc,
